# cppreviewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  example.cpp  parser.cpp  print.cpp  test.cpp  xref.cpp
patterns/: README.md  common.cpp  common.h  constant_evaluator.cpp  constant_evaluator.h  functions.cpp  nodeprinter.cpp  returnv.cpp
